# llm-dao

./: .gitignore  README.org  homepage.py  llamaIndex.ipynb  main.py  pyproject.toml  run.sh  test.py  toolCall.ipynb
agent/: Record.org  client.py  client_mcp.py  client_mcp_complex.py  client_pydantic.py  langchain_init.py  langchain_mcp.py  langfuse_test.py  langgraph_builder.py  oclient.py  ollama_client.py  raw_client.py  response_format.py  sence_voice_model.py
app/: audio_input.py  chromadb_create.py
data/: a-intro.txt  essay.txt
notebook/: langMem.ipynb  langchain.ipynb  langgraph.ipynb  toolCall.ipynb
pages/: chat.py  rag.py  rag_with_db.py  rag_with_voice.py  streamlit_chat.py  voice_chat.py
tools/: echo.py
utils/: check_ollama.py  state.py  trace.py
