[tool.poetry]
name = "llama-dao"
version = "0.1.0"
description = ""
authors = ["Boarmon <xiaolang001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.38.0"
ollama = "^0.3.1"
streamlit = "^1.37.1"
llama-index-llms-ollama = "^0.2.2"
llama-index = "^0.10.64"
llama-index-core = "^0.10.64"
llama-index-embeddings-ollama = "^0.1.3"
[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "ali"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"


[[tool.poetry.source]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
priority = "primary"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"
