[project]
name = "llm-dao"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-deepseek>=0.1.4",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-ollama>=0.3.6",
    "langfuse>=3.3.0",
    "langgraph>=0.6.5",
    "langmem>=0.0.29",
    "mcp[cli]>=1.12.4",
    "openai>=1.99.9",
]
